Collection fixes (#416)
This fixes some issues that cropped up in the last PR

---------

--- a/components/reps/GridRep/index.module.scss
+++ b/components/reps/GridRep/index.module.scss
@@ -3,11 +3,8 @@
   border: 1px solid transparent;
   border-radius: $card-corner;
   box-sizing: border-box;
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-  gap: $unit;
-  padding: $unit-2x $unit-2x 0 $unit-2x;
   min-width: 320px;
+  position: relative;
   width: 100%;
   opacity: 1;
 
@@ -52,6 +49,22 @@
         box-shadow: none;
       }
     }
+  }
+
+  a {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    grid-gap: 8px;
+    gap: 8px;
+    padding: $unit-2x $unit-2x 0 $unit-2x;
+  }
+
+  button {
+    position: absolute;
+    z-index: 2;
+    right: $unit-2x;
+    top: $unit-2x;
+    width: 44px;
   }
 
   .gridContainer {
@@ -118,9 +131,9 @@
   }
 
   .weaponGrid {
-    aspect-ratio: 2/0.95;
+    aspect-ratio: 2/0.8;
     display: grid;
-    grid-template-columns: 1fr 3.36fr; /* left column takes up 1 fraction, right column takes up 3 fractions */
+    grid-template-columns: 1fr 3.6fr; /* left column takes up 1 fraction, right column takes up 3 fractions */
     grid-gap: $unit; /* add a gap of 8px between grid items */
 
     .weapon {
